v2-mobile-fixes-3: add z-index to /trigrams footer

--- a/style/trigrams.css
+++ b/style/trigrams.css
@@ -126,3 +126,8 @@
   padding-top: 0.2em;
   padding-right: 0.2em;
 }
+
+#footer-wrap {
+  background-color: black;
+  z-index: 750;
+}
